Great and Stuff

--- a/secret recipe.htm
+++ b/secret recipe.htm
@@ -2,7 +2,7 @@
 <html>
 <body>
 
-<h1>Ingredients and love</h1>
+<h1>Stuff and love</h1>
 <ul>
 <li>2 cups Butter or margarine, softened</li>
 <li>3/4 cup Sugar</li>
